<resources>
    <string name="app_name">DesafioEjercicio2</string>
    <string name="nombre">Nombre</string>
    <string name="nota1">Nota 1</string>
    <string name="nota2">Nota 2</string>
    <string name="nota3">Nota 3</string>
    <string name="nota4">Nota 4</string>
    <string name="nota5">Nota 5</string>
    <string name="enviar">Enviar</string>
    <string name="resultado">Resultado:</string>
</resources>